--- a/.github/workflows/build-release-assets.yml
+++ b/.github/workflows/build-release-assets.yml
@@ -10,11 +10,15 @@ jobs:
         with: { dotnet-version: 8.0.x }
       - run: dotnet publish src/VipbJsonTool -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -o publish
       - run: dotnet publish src/LvprojJsonTool -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -o publish
+
+      - run: chmod +x bin/vipb2json bin/json2vipb bin/lvproj2json bin/json2lvproj bin/buildspec2json bin/json2buildspec
+
       - run: |
           ./bin/vipb2json  --input tests/Samples/seed.vipb   --output seed-vipb.json
           ./bin/lvproj2json --input tests/Samples/seed.lvproj --output seed-lvproj.json
           yq -p json -o yaml seed-vipb.json   > seed-vipb.yaml
           yq -p json -o yaml seed-lvproj.json > seed-lvproj.yaml
+
       - uses: actions/upload-artifact@v4
         with:
           name: release-assets
